--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>Hi, I'm MMO<a href="#">有趣至极</a>.</p>
+            <p>Hi, I'm MMO,<a href="#">有趣至极</a>.</p>
           </div>
         </div>
     </div>
