--- a/links.html
+++ b/links.html
@@ -4,11 +4,11 @@ title: Links
   <div class="container">
 
     <div id="article">
-      <h1>Links</h1>
-      <p>I find a wide variety of things interesting and/or useful on the web. These are just some of them.</p>
+      <h1>趣物</h1>
+      <p>这里将有有趣的事和物，欢迎品尝</p>
       <br>
       <center>
-      <a href="#fashion"><span class="label label-danger fashion-button">Fashion</span></a>
+      <a href="#game"><span class="label label-danger fashion-button">Fashion</span></a>
       <a href="#programming"><span class="label label-danger programming-button">Programming</span></a>
       <a href="#tech"><span class="label label-danger tech-button">Tech & Gadgets</span></a>
       <a href="#misc"><span class="label label-danger misc-button">Misc</span></a>
@@ -17,7 +17,7 @@ title: Links
       <br>
     </div>
 
-    <div id="article" class="fashion">
+    <div id="article" class="game">
       <a name="fashion">
       <h2>Fashion</h2>
       <table class="table table-hover ">
