--- a/links.html
+++ b/links.html
@@ -8,16 +8,16 @@ title: Links
       <p>这里将有有趣的事和物，欢迎品尝</p>
       <br>
       <center>
-      <a href="#game"><span class="label label-danger fashion-button">Fashion</span></a>
-      <a href="#programming"><span class="label label-danger programming-button">Programming</span></a>
-      <a href="#tech"><span class="label label-danger tech-button">Tech & Gadgets</span></a>
-      <a href="#misc"><span class="label label-danger misc-button">Misc</span></a>
-      <a href="#misc"><span class="label label-danger podcasts-button">Podcasts</span></a>
+      <a href="#fashion"><span class="label label-danger fashion-button">样式1</span></a>
+      <a href="#programming"><span class="label label-danger programming-button">样式2</span></a>
+      <a href="#tech"><span class="label label-danger tech-button">样式3</span></a>
+      <a href="#misc"><span class="label label-danger misc-button">样式4</span></a>
+      <a href="#misc"><span class="label label-danger podcasts-button">样式5</span></a>
       </center>
       <br>
     </div>
 
-    <div id="article" class="game">
+    <div id="article" class="fashion">
       <a name="fashion">
       <h2>Fashion</h2>
       <table class="table table-hover ">
