--- a/links.html
+++ b/links.html
@@ -19,39 +19,39 @@ title: Links
 
     <div id="article" class="fashion">
       <a name="fashion">
-      <h2>Fashion</h2>
+      <h2>样式1</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>site</b></span></p>
+              <p class="p2"><span class="s1"><b>链接</b></span></p>
             </td>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>what is it</b></span></p>
+              <p class="p2"><span class="s1"><b>描述</b></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2"><a href="http://reddit.com/r/malefashionadvice"><b>r/malefashionadvice</b></a></span></p>
+              <p class="p2"><span class="s2"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1">This is the go-to community for beginners in male fashion. Their FAQ guides are extremely helpful. The fashion here tends to be more of the casual-professional side, with a healthy dose of urban fashionwear.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s1"><a href="http://4chan.org/fa/"><b>/fa/</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1">Not mentioning whatever stigmas 4chan has, I’ve found the /fa/ community to be a great resource for anyone interested in more urban fashion. High end designers are greatly favored here (such as Rick Owens). Their FAQ is straightforward.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s1"><a href="http://dappered.com"><b>dappered</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td7">
-              <p class="p2"><span class="s1">Joe does an amazing job with Dappered. With daily posts ranging from style advice to killer deals, this is a must add for your bookmarks. I find this perfect for those looking to dress business-casual.</span></p>
+              <p class="p2"><span class="s1">描述文本</span></p>
             </td>
           </tr>
         </tbody>
@@ -60,31 +60,31 @@ title: Links
 
     <div id="article"class="programming">
       <a name="programming">
-      <h2>Programming</h2>
+      <h2>样式2</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="https://news.ycombinator.com/news"><b>hacker news</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s1">An indispensable community if you’re interested in the more technical side of tech. Incredibly smart people discussing equally (usually) smart topics. <span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://reddit.com/r/programming"><b>r/programming</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s1">An excellent resource for programmers both beginner and experienced. Be sure to check out other related subreddits from their sidebar.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.codersgrid.com"><b>coders grid</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s1">Great collection of links and articles related to mostly front end development.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
         </tbody>
@@ -93,31 +93,31 @@ title: Links
 
     <div id="article"class="tech">
       <a name="tech">
-      <h2>Tech & Gadgets</h2>
+      <h2>样式3</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.theverge.com"><b>the verge</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">My go to site for tech news. Their longform work is also deserving of your time.</span></p>
+              <p class="p2"><span class="s2">描述文本</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://recode.net"><b>re/code</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="http://recode.net"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s2">Essentially the entire (great) team from AllThings D moved over to a separate site at the turn of the year. An excellent resource for reliable news and reviews.</span></p>
+              <p class="p2"><span class="s2">描述文本</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.anandtech.com"><b>anandtech</b></a></span><span class="s2"><b><span class="Apple-converted-space"> </span></b></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span><span class="s2"><b><span class="Apple-converted-space"> </span></b></span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s2">Want to read the most in-depth reviews on products? Look no further.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
         </tbody>
@@ -126,31 +126,31 @@ title: Links
 
     <div id="article"class="misc">
       <a name="misc">
-      <h2>Misc</h2>
+      <h2>样式4</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.quora.com"><b>Quora</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>Quora</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Think Yahoo! Answers but more…serious. You can find some discussions on very interesting questions. You do need to sign up though.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://longform.org"><b>Longform</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>Longform</b></a></span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s2">One of the best collections of reading (both fiction and non-fiction articles) material for your Pocket.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s2"><b>Ask </b><a href="http://ask.metafilter.com"><span class="s1"><b>Metafilter</b></span></a></span></p>
+              <p class="p2"><span class="s2"><b>Ask </b><a href="#"><span class="s1"><b>Metafilter</b></span></a></span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s2">A great loyal community whose quality is in part kept high with a pay-for-membership model. Browse through the top questions for some great discussions.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
         </tbody>
@@ -159,7 +159,7 @@ title: Links
 
     <div id="article"class="podcasts">
       <a name="podcasts">
-      <h2>Podcasts</h2>
+      <h2>样式5</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
