--- a/links.html
+++ b/links.html
@@ -164,34 +164,34 @@ title: Links
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.twit.tv"><b>twit.tv</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="http://www.twit.tv"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Leo Laporte is<span class="Apple-converted-space">  </span>great to listen to and his guests help keep the discussions fun and lively. My favorite podcasts include “This Week in Tech” and “Windows Weekly”<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">Leo Laporte is<span class="Apple-converted-space">  </span>描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://howtodoeverything.org"><b>How to do Everything (NPR)</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="http://howtodoeverything.org"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s2">How do you order water at a restaurant without looking like an idiot? One part educational, one part humor.</span></p>
+              <p class="p2"><span class="s2">描述文本</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.radiolab.org"><b>Radiolab (NPR)</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="http://www.radiolab.org"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Radiolab has a huge fanbase and it’s not without reason. They do a great job of keeping your attention with engrossing topics and amazing audio work. <span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.npr.org/blogs/allsongs/"><b>all songs considered (NPR)</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="http://www.npr.org/blogs/allsongs/"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s2">NPR’s music podcast can be a hit or a miss depending on your taste (less mainstream, more discovery based)<span class="Apple-converted-space">  </span>in music but be sure to give it try.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space">  </span>描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
         </tbody>
