--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
       <div class="user-card">
         <div class="row">
           <div class="card col-md-3">
-            <img src="{{ site.baseurl }}/images/self.jpg">
+            <img src="{{ site.baseurl }}/images/self.gif">
           </div>
           <div class="col-md-9">
             <h1>MMO</h1>
