--- a/about.html
+++ b/about.html
@@ -11,14 +11,14 @@ title: About
           </div>
           <div class="col-md-9">
             <h1>MMO</h1>
-            <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;新时代前端打字员</p>
-            <p><i class="fa fa-envelope-o"></i>&nbsp;酱油瓶</p>
+            <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;来自新时代的广东前端打字员</p>
+            <p><i class="fa fa-envelope-o"></i>&nbsp;11436052@qq.com</p>
             <hr />
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>Hi, I'm MMO,<a href="#">有趣至极</a>.</p>
+            <p>Hi, I'm MMO,<a href="#">一个自称有趣的打字员。</a>.</p>
           </div>
         </div>
     </div>
