--- a/new.html
+++ b/new.html
@@ -1,11 +1,11 @@
 ---
-title: Links
+title: MMO-趣物
 ---
   <div class="container">
 
     <div id="article">
       <h1>趣物</h1>
-      <p>这里将有有趣的事和物，欢迎品尝</p>
+      <p>这里将有有趣的事和物，欢迎品尝~</p>
       <br>
       <center>
       <a href="#fashion"><span class="label label-danger fashion-button">样式1</span></a>
