--- a/new.html
+++ b/new.html
@@ -131,7 +131,7 @@ title: MMO-趣物
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="#"><b>Quora</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
               <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
@@ -139,7 +139,7 @@ title: MMO-趣物
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="#"><b>Longform</b></a></span></p>
+              <p class="p2"><span class="s1"><a href="#"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td4">
               <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
@@ -147,7 +147,7 @@ title: MMO-趣物
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s2"><b>Ask </b><a href="#"><span class="s1"><b>Metafilter</b></span></a></span></p>
+              <p class="p2"><span class="s2"><b>Ask </b><a href="#"><span class="s1"><b>链接</b></span></a></span></p>
             </td>
             <td valign="top" class="td6">
               <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space"> </span></span></p>
@@ -167,7 +167,7 @@ title: MMO-趣物
               <p class="p2"><span class="s1"><a href="http://www.twit.tv"><b>链接</b></a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Leo Laporte is<span class="Apple-converted-space">  </span>描述文本<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">描述文本<span class="Apple-converted-space">  </span>描述文本<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
