--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: MMO的主页
 ---
-{% include showcase.html %}
+<!-- {% include showcase.html %} -->
 {% include greeting.html %}
 
 {% if site.posts != empty %}
