--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: MMO的主页
       <li>
         <span>
           <h4>
-            <a href="{{ site.baseurl }}/{{ post.url }}">
+            <a href="{{ site.baseurl }}{{ post.url }}">
               {{ post.title }}
             </a>
             {{ fresh_tag }}
